# Music-Emotion-Predictor

./: AGENTS.md  README.md  app.py  music_emotion_prediction.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_music_dataset.csv
src/music_emotion_predictor/: __init__.py  cli.py  data.py  pipeline.py  validation.py
src/music_emotion_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py  test_validation.py
