[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-emotion-predictor"
version = "0.1.0"
description = "Reproducible music emotion modeling pipeline using supervised and unsupervised learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "numpy",
  "pandas",
  "matplotlib",
  "plotly",
  "seaborn",
  "scikit-learn"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
music-emotion-predict = "music_emotion_predictor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
